@@ -1,5 +1,7 @@
 30 November 2022: George
 	- Add SVCB and HTTPS to the types removed by 'unbound-control flush'.
+	- Clear documentation for interactivity between the subnet module and
+	  the serve-expired and prefetch configuration options.
 
 30 November 2022: Wouter
 	- Fix #782: Segmentation fault in stats.c:404.
